--- a/排序法汇总/Project/Project.vcxproj.filters
+++ b/排序法汇总/Project/Project.vcxproj.filters
@@ -24,6 +24,21 @@
     <ClCompile Include="..\display.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\cinnumber.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Bubble.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Select.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\restore.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Insert.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\sort.h">
