--- a/vscode/.vscode/launch.json
+++ b/vscode/.vscode/launch.json
@@ -4,14 +4,17 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "(gdb) 启动",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/${fileBasenameNoExtension}.exe",
+            //"program": "${workspaceFolder}/${fileBasenameNoExtension}.exe",// 将要进行调试的程序的路径  
+            "program": "${fileDirname}/${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            //"cwd": "${workspaceFolder}",
+            "cwd": "${fileDirname}", 
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
